--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,10 @@
 name = "xraycrypto-news"
-main = "cloudflare-worker-deployed.js"
+main = "cloudflare-worker-news.js"
 account_id = "3beb86ebb037f29ad4389a8aa47898e0"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
-# 🔒 Scope Worker ONLY to /marketbrief/* on markets.xraycrypto.io
+# 🔒 Scope the Worker ONLY to /marketbrief/* so the rest of your site stays untouched
 routes = [
   { pattern = "markets.xraycrypto.io/marketbrief/*", zone_id = "431ec0e3d05286b27e268181bffe8d41" }
 ]
@@ -13,7 +13,7 @@ routes = [
 APP_NAME = "XRayCrypto News"
 BRAND = "XRayCrypto"
 AUDIENCE_LEVEL = "balanced"   # balanced | casual | pro
-QUOTE_SOURCE   = "kv_daily"   # we store the day's Stoic quote in KV (optional admin)
+QUOTE_SOURCE   = "kv_daily"   # we store the day's Stoic quote in KV (optional admin endpoint)
 PRICE_PROVIDER = "binance"    # CoinGecko fills gaps if key present
 
 [[kv_namespaces]]
@@ -26,21 +26,34 @@ preview_id = "2f25cb6f358842028bceb61cb55c9f3d"
 # Post-market: 20:15 UTC (04:15 ET)
 crons = ["0 12 * * *", "15 20 * * *"]
 
-# Secrets to add via CLI (values are NOT in this file):
-# wrangler secret put OPENAI_API_KEY
-# wrangler secret put COINGECKO_API_KEY
-# (optional admin) wrangler secret put ADMIN_KEY
-# (optional)       wrangler secret put OPENAI_MODEL   # e.g., gpt-5.1-mini
-
+# -------------------------
+# Production environment
+# -------------------------
 [env.production]
 name = "xraycrypto-news"
 routes = [
   { pattern = "markets.xraycrypto.io/marketbrief/*", zone_id = "431ec0e3d05286b27e268181bffe8d41" }
 ]
 
+# Duplicate vars into env.production so Wrangler doesn't warn about inheritance
+[env.production.vars]
+APP_NAME = "XRayCrypto News"
+BRAND = "XRayCrypto"
+AUDIENCE_LEVEL = "balanced"
+QUOTE_SOURCE   = "kv_daily"
+PRICE_PROVIDER = "binance"
+
+[[env.production.kv_namespaces]]
+binding = "MARKET_KV"
+id = "2f25cb6f358842028bceb61cb55c9f3d"
+preview_id = "2f25cb6f358842028bceb61cb55c9f3d"
+
+# -------------------------
+# Staging (optional)
+# -------------------------
 [env.staging]
 name = "xraycrypto-news-staging"
-# If you add a staging subdomain later (proxied DNS), uncomment:
+# If you add a staging subdomain (proxied) later, uncomment and set the route:
 # routes = [
 #   { pattern = "staging-markets.xraycrypto.io/marketbrief/*", zone_id = "431ec0e3d05286b27e268181bffe8d41" }
 # ]
